<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/identitytoolkit_page"
              android:layout_width="@dimen/identitytoolkit_page_width"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:orientation="vertical">

    <TextView
        style="@style/identitytoolkit_text.header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/identitytoolkit_space_big"
        android:gravity="center"
        android:text="@string/identitytoolkit_header_sign_in"/>

    <TextView
        style="@style/identitytoolkit_text.label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/identitytoolkit_text_indent"
        android:text="@string/identitytoolkit_label_email"/>

    <EditText
        android:id="@+id/identitytoolkit_email"
        style="@style/identitytoolkit_text_input"
        android:enabled="false"
        android:hint="@string/identitytoolkit_hint_email"
        android:inputType="textEmailAddress"/>

    <TextView
        style="@style/identitytoolkit_text.label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/identitytoolkit_text_indent"
        android:layout_marginTop="@dimen/identitytoolkit_space_small"
        android:text="@string/identitytoolkit_label_password"/>

    <EditText
        android:id="@+id/identitytoolkit_password"
        style="@style/identitytoolkit_text_input"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/identitytoolkit_trouble_sign_in"
        style="@style/identitytoolkit_text.link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/identitytoolkit_text_indent"
        android:layout_marginTop="@dimen/identitytoolkit_space_small"
        android:text="@string/identitytoolkit_label_trouble"/>

    <Button
        android:id="@+id/identitytoolkit_next"
        style="@style/identitytoolkit_button"
        android:layout_marginTop="@dimen/identitytoolkit_space_big"
        android:enabled="false"
        android:text="@string/identitytoolkit_label_next"/>

</LinearLayout>
<!-- From: file:/usr/local/google/home/mengcheng/Work/g/gitkit-android/google3/apps/easyconnect/easyrp/gitkit/clientsdk/android/identitytoolkit/src/main/res/layout/identitytoolkit_password_sign_in_page.xml -->