<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              style="@style/identitytoolkit_page"
              android:layout_width="@dimen/identitytoolkit_page_width"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:orientation="vertical">

    <TextView
        style="@style/identitytoolkit_text.header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/identitytoolkit_space_big"
        android:gravity="center"
        android:text="@string/identitytoolkit_header_sign_up"/>

    <LinearLayout
        style="@style/identitytoolkit_inner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/identitytoolkit_text.label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/identitytoolkit_text_indent"
            android:text="@string/identitytoolkit_label_email"/>

        <TextView
            android:id="@+id/identitytoolkit_email"
            style="@style/identitytoolkit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/identitytoolkit_text_indent"
            tools:text="user@domain.com"/>
    </LinearLayout>

    <LinearLayout
        style="@style/identitytoolkit_inner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/identitytoolkit_text.label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/identitytoolkit_text_indent"
            android:layout_marginTop="@dimen/identitytoolkit_space_small"
            android:text="@string/identitytoolkit_label_name"/>

        <EditText
            android:id="@+id/identitytoolkit_display_name"
            style="@style/identitytoolkit_text_input"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"/>
    </LinearLayout>

    <LinearLayout
        style="@style/identitytoolkit_inner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/identitytoolkit_text.label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/identitytoolkit_text_indent"
            android:layout_marginTop="@dimen/identitytoolkit_space_small"
            android:text="@string/identitytoolkit_label_password"/>

        <EditText
            android:id="@+id/identitytoolkit_password"
            style="@style/identitytoolkit_text_input"
            android:hint="@string/identitytoolkit_hint_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/identitytoolkit_password_confirm"
            style="@style/identitytoolkit_text_input"
            android:layout_marginTop="@dimen/identitytoolkit_space_small"
            android:hint="@string/identitytoolkit_hint_password_confirm"
            android:imeOptions="actionDone"
            android:inputType="textPassword"/>
    </LinearLayout>

    <CheckBox
        android:id="@+id/identitytoolkit_check_tos"
        style="@style/identitytoolkit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/identitytoolkit_space_small"
        tools:text="I accept the Terms of Service."/>

    <Button
        android:id="@+id/identitytoolkit_next"
        style="@style/identitytoolkit_button"
        android:layout_marginTop="@dimen/identitytoolkit_space_big"
        android:enabled="false"
        android:text="@string/identitytoolkit_label_next"/>

</LinearLayout>

<!-- From: file:/usr/local/google/home/mengcheng/Work/g/gitkit-android/google3/apps/easyconnect/easyrp/gitkit/clientsdk/android/identitytoolkit/src/main/res/layout/identitytoolkit_password_sign_up_page.xml -->