<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/identitytoolkit_page"
    android:layout_width="@dimen/identitytoolkit_page_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/identitytoolkit_verify_account_header"
        style="@style/identitytoolkit_text.label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="Verify user@domain.com" />

    <View
        style="@style/identitytoolkit_divider"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/identitytoolkit_space_big" />

    <TextView
        android:id="@+id/identitytoolkit_verified_account_info"
        style="@style/identitytoolkit_text.instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/identitytoolkit_label_password_verified_account_info" />

    <TextView
        android:id="@+id/identitytoolkit_current_account_info"
        style="@style/identitytoolkit_text.instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/identitytoolkit_space_small"
        tools:text="But just now, you signed in with Google." />

    <ImageView
        android:id="@+id/identitytoolkit_current_idp_icon"
        android:layout_gravity="left"
        android:layout_marginTop="@dimen/identitytoolkit_space_small"
        android:layout_marginLeft="@dimen/identitytoolkit_space_small"
        android:layout_width="@dimen/identitytoolkit_button_height"
        android:layout_height="@dimen/identitytoolkit_button_height"
        android:contentDescription="@string/identitytoolkit_idp_icon_description"
        tools:background="@drawable/identitytoolkit_idp_google_bg"
        tools:src="@drawable/identitytoolkit_idp_google_icon" />

    <TextView
        android:id="@+id/identitytoolkit_verify_account_instruction"
        style="@style/identitytoolkit_text.instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/identitytoolkit_space_big"
        android:text="@string/identitytoolkit_label_password_verify_account_instruction" />

    <TextView
        style="@style/identitytoolkit_text.label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/identitytoolkit_text_indent"
        android:layout_marginTop="@dimen/identitytoolkit_space_big"
        android:text="@string/identitytoolkit_label_password" />

    <EditText
        android:id="@+id/identitytoolkit_password"
        style="@style/identitytoolkit_text_input"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/identitytoolkit_next"
        style="@style/identitytoolkit_button"
        android:layout_marginTop="@dimen/identitytoolkit_space_big"
        android:enabled="false"
        android:text="@string/identitytoolkit_label_continue" />

</LinearLayout>
<!-- From: file:/usr/local/google/home/mengcheng/Work/g/gitkit-android/google3/apps/easyconnect/easyrp/gitkit/clientsdk/android/identitytoolkit/src/main/res/layout/identitytoolkit_password_link_account_page.xml -->